fix: adds more spacing to meta list for tap-targets validity in lighthouse [closes #1924]

--- a/assets/scss/elements/blog/_blogpost-index.scss
+++ b/assets/scss/elements/blog/_blogpost-index.scss
@@ -111,11 +111,10 @@
     &:first-child {
       margin-top: 0;
     }
-
-    &.nv-meta-list {
-      margin-top: 0;
-    }
   }
+	.nv-meta-list {
+		margin-top: 5px;
+	}
 	.excerpt-wrap > *:last-child{
 		margin-bottom: 0;
 	}
@@ -132,11 +131,11 @@
       &:last-child {
         margin-bottom: 0;
       }
-
-      &.nv-meta-list {
-        margin-top: 0;
-      }
     }
+
+		.nv-meta-list {
+			margin-top: 5px;
+		}
 
     .blog-entry-title {
       margin-bottom: 0;
